added remove btn, is not yet working

--- a/index.html
+++ b/index.html
@@ -29,6 +29,43 @@
         <div class="form-toggler btn-shadow plus">+</div>
         <div class="form-toggler minus hidden">-</div>
         <div class="row library-display">
+            <div class="col-4 bookWrapper">
+                <div class="bookCard col">
+                    <h3>book title</h3>
+                    <h5>author</h5>
+                    <h5>Pages: 100</h5>
+                    <h5>Finished reading</h5>
+                    <button class="btn card-btn btn-outline-danger">Remove</button>
+                </div>
+            </div>
+            <div class="col-4 bookWrapper">
+                <div class="bookCard col">
+                    <h3>book title</h3>
+                    <h5>author</h5>
+                    <h5>Pages: 100</h5>
+                    <h5>Finished reading</h5>
+                    <button class="btn card-btn btn-outline-danger">Remove</button>
+                </div>
+            </div>
+            <div class="col-4 bookWrapper">
+                <div class="bookCard col">
+                    <h3>book title</h3>
+                    <h5>author</h5>
+                    <h5>Pages: 100</h5>
+                    <h5>Finished reading</h5>
+                    <button class="btn card-btn btn-outline-danger">Remove</button>
+                </div>
+            </div>
+            <div class="col-4 bookWrapper">
+                <div class="bookCard col">
+                    <h3>book title</h3>
+                    <h5>author</h5>
+                    <h5>Pages: 100</h5>
+                    <h5>Finished reading</h5>
+                    <button class="btn card-btn btn-outline-danger">Remove</button>
+                </div>
+            </div>
+
         </div>
     </div>
     <script src="main.js"></script>
