added ability to remove book cards

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row library-display">
             <div class="col-4 bookWrapper">
                 <div class="bookCard col">
-                    <h3>book title</h3>
+                    <h3>book title 1</h3>
                     <h5>author</h5>
                     <h5>Pages: 100</h5>
                     <h5>Finished reading</h5>
@@ -40,7 +40,7 @@
             </div>
             <div class="col-4 bookWrapper">
                 <div class="bookCard col">
-                    <h3>book title</h3>
+                    <h3>book title 2</h3>
                     <h5>author</h5>
                     <h5>Pages: 100</h5>
                     <h5>Finished reading</h5>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-4 bookWrapper">
                 <div class="bookCard col">
-                    <h3>book title</h3>
+                    <h3>book title 3</h3>
                     <h5>author</h5>
                     <h5>Pages: 100</h5>
                     <h5>Finished reading</h5>
@@ -58,7 +58,7 @@
             </div>
             <div class="col-4 bookWrapper">
                 <div class="bookCard col">
-                    <h3>book title</h3>
+                    <h3>book title 4</h3>
                     <h5>author</h5>
                     <h5>Pages: 100</h5>
                     <h5>Finished reading</h5>
