working on the front end as required

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                     <h3>book title 2</h3>
                     <h5>author</h5>
                     <h5>Pages: 100</h5>
-                    <h5>Finished reading</h5>
+                    <h5>
+                        <input type="checkbox">
+                        Finished Reading
+                    </h5>
                     <button class="btn card-btn btn-outline-danger">Remove</button>
                 </div>
             </div>
